--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,9 @@
 {
-	"id": "obsidian-example-plugin",
-	"name": "Example Plugin",
+	"id": "obsidian-nem-ai-writing-tools",
+	"name": "AI Writing Tools",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "This is an example plugin for Obsidian. This plugin counts the lines of the active file and prints it in the status bar.",
-	"author": "Florian Ludewig",
-	"authorUrl": "https://flolu.de",
-	"fundingUrl": "https://flolu.de/donations",
+	"author": "Nemesarial",
 	"isDesktopOnly": false
 }
