--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
 		"esModuleInterop": true,
 		"lib": ["DOM", "ES5", "ES6", "ES7"]
 	},
-	"include": ["**/*.ts", "lib/Agent.mjs"]
+	"include": ["**/*.ts", "lib/Agent.ts"]
 }
