--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,19 @@
 	"minAppVersion": "0.15.0",
 	"description": "This is an example plugin for Obsidian. This plugin counts the lines of the active file and prints it in the status bar.",
 	"author": "Nemesarial",
-	"isDesktopOnly": false
+	"isDesktopOnly": false,
+	"commands": [
+		{
+			"id": "show-dialog",
+			"name": "Show Dialog",
+			"hotkeys": [
+				{
+					"modifiers": [
+						"Alt"
+					],
+					"key": "I"
+				}
+			]
+		}
+	]
 }
